agora o autocomplete vai funcionar

--- a/app/views/beaches/show.html.erb
+++ b/app/views/beaches/show.html.erb
@@ -221,7 +221,7 @@
           <% else %>
             <%= image_tag "dirty_beach.png", class: "image-clean" %>
             <div class="card-trip-infos">
-              <div class="alert-danger">ATENÇÃO: ESSA PRAIA NÃO ESTÁ RECOMENDADA PARA BANHO DE ACORDO COM O ÓRGÃO AMBIENTAL OFICIAL!</div>
+              <div class="alert-danger">ATENÇÃO: PRAIA NÃO RECOMENDADA PARA BANHO PELO ÓRGÃO AMBIENTAL OFICIAL!</div>
             </div>
           <% end %>
         </div>
