--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,6 +7,8 @@
   height: 60px;
   padding: 0px 30px;
   color: rgb(10,10,10);
+  position: relative;
+  top: 299px;
 }
 .footer-links {
   display: flex;
