--- a/app/views/beaches/index.html.erb
+++ b/app/views/beaches/index.html.erb
@@ -108,7 +108,7 @@
   </div>
 </main>
 
-<script>
+<!-- <script>
   const search = document.getElementById('search-data')
   const skills = JSON.parse(search.dataset.skills)
   search.addEventListener('keyup', (event) => {
@@ -118,4 +118,4 @@
       });
     });
   });
-</script>
+</script> -->
