--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -8,7 +8,7 @@
   margin-bottom: 20px;
   padding: 5px;
   box-shadow: 3px 3px #ccc5b9;
-  opacity: 0.5;
+  background-color: #DACACA;
   .p-card {
     font-size: 12px;
     z-index: 1;
