--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -65,11 +65,16 @@
 #floating-panel {
   z-index: 5;
   padding: 5px;
-  line-height: 30px;
+  line-height: 25px;
   border-color: gray;
-  font-family: 'Anton', sans-serif;
-  font-size: 20px;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 30px;
+  font-weight: bold;
   width: auto;
+  p{
+    margin-right: 10px;
+  }
+
 }
 
 .pressed-direction{
