--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -71,6 +71,10 @@
     .image{
       width: 40px;
     }
-
+    .navbar-brand {
+      img {
+      width: 35px !important;
+      }
+    }
   }
 }
