--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,10 +1,13 @@
 .non-btn {
   border: none;
   background-color: transparent;
-  height: 38px;
-  margin-top: 2px;
-  margin-left: 2px;
-
+  &:hover{
+    opacity: 0.7;
+    cursor: pointer;
+  }
+  opacity: 1;
+  font-size: 35px;
+  line-height: normal
 }
 
 .btn-go {
